--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,11 +1,11 @@
 /* TODO: Label selector type */
 * {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
 /* TODO: Label selector type */
 body {
-  background-color: lemonchiffon;
+  background-color: rgb(26, 26, 26);
 }
 
 header,
@@ -14,26 +14,61 @@ footer {
   height: 100px;
   line-height: 100px;
   color: #f0ead6;
-  background-color: #191970;
+  background-color: gray;
 }
 
 header img {
-    width: 100px;
-    background-color: #f0ead6;
+    width: 90px;
+    height: 86px;
+    background-color: whitesmoke;
     border-radius: 100%;
+    
     text-align: center;
     margin-top: 20px;
+    position: absolute;
+    top: -5px;
+    left: 15px;
   
 }
 
 header h1 {
   font-weight: bolder;
-  font-size: 24px;
+  font-size: 20px;
   position: absolute;
-  color: black;
+  color: whitesmoke;
   left: 125px;
   top: -5px;
 
+}
+
+header nav {
+  padding-top: 15px;
+  margin-right: 30px;
+  text-align: center;
+  
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  position: absolute;
+  top: -3%;
+  right: 38%;
+  
+  
+}
+
+header nav ul {
+  list-style-type: none;
+  
+}
+
+header nav ul li {
+  display: inline-block;
+  margin-left: 25px;
+  
+}
+
+a {
+  color: whitesmoke;
+  text-decoration: none;
 }
 
 #section icon {
@@ -48,7 +83,7 @@ header h1 {
 
 figure {
   width: 200px;
-  background-color: #f0ead6;
+  background-color: gray;
 }
 
 /* TODO: Label selector type */
@@ -58,5 +93,5 @@ figure {
 
 /* TODO: Label selector type */
 #contact-section {
-  background-color: #f0ead6;
+  background-color: gray;
 }
