--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,7 +5,7 @@
 
 /* TODO: Label selector type */
 body {
-  background-color: rgb(26, 26, 26);
+  background-color: whitesmoke;
 }
 
 header,
@@ -13,8 +13,22 @@ footer {
   width: 100%;
   height: 100px;
   line-height: 100px;
-  color: #f0ead6;
-  background-color: gray;
+  color: white;
+  
+  background: linear-gradient(rgb(70, 70, 70), rgb(37, 37, 37))
+}
+
+header{ 
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  
 }
 
 header img {
@@ -25,19 +39,18 @@ header img {
     
     text-align: center;
     margin-top: 20px;
-    position: absolute;
-    top: -5px;
+    position: relative;
+    top: -13px;
     left: 15px;
-  
 }
 
 header h1 {
-  font-weight: bolder;
+  font-weight: lighter;
   font-size: 20px;
   position: absolute;
   color: whitesmoke;
-  left: 125px;
-  top: -5px;
+  left: 150px;
+  top: -14%;
 
 }
 
@@ -49,7 +62,7 @@ header nav {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
   position: absolute;
-  top: -3%;
+  top: -35%;
   right: 38%;
   
   
@@ -71,6 +84,11 @@ a {
   text-decoration: none;
 }
 
+
+
+main + section {
+  position: abs
+}
 #section icon {
   width: 100px;
     background-color: #f0ead6;
@@ -79,19 +97,159 @@ a {
     margin-top: 20px;
 }
 
+#about-me {
+  color: black;
+}
 
+#about-me h2 {
+  position: absolute;
+  top: 200px;
+  left: 450px;
+}
 
-figure {
-  width: 200px;
-  background-color: gray;
+#about-me h3 {
+  font-weight: lighter;
+  position: absolute;
+  top: 250px;
+  left: 305px;
+}
+#about-me p {
+  position: absolute;
+  top: 300px;
+  left: 305px;
+}
+
+#about-me figure img{
+  text-align: right;
+  position: absolute;
+  right: 500px;
+  top: 200px;
+  
+}
+
+#links {
+  color: black;
+}
+
+#links h2 {
+  position: absolute;
+  top: 200px;
+  left: 450px;
+}
+
+#links h3 {
+  font-weight: lighter;
+  position: absolute;
+  top: 250px;
+  left: 305px;
+}
+
+#links a{
+  color: black;
+}
+#links nav ul li {
+  color: black;
+  list-style-type: none;
+}
+
+#links li:hover {
+  text-decoration: underline;
+  text-decoration-color: black;
 }
 
 /* TODO: Label selector type */
 .highlighted-text {
   font-weight: bolder;
+  
 }
 
+#portfolio {
+  color: black;
+  display:flex;
+  flex-wrap: wrap;
+flex-direction: column;
+}
+
+#portfolio h2 {
+  position: absolute;
+  top: 200px;
+  left: 450px;
+}
+
+#portfolio h3 {
+  font-weight: lighter;
+  position: absolute;
+  top: 250px;
+  left: 305px;
+}
+#portfolio p {
+  position: absolute;
+  top: 300px;
+  left: 305px;
+}
+
+#portfolio img {
+  text-align: right;
+  position: relative;
+  left: 52.85%;
+  top: 120px;
+ 
+  padding-block: 10px;
+  
+}
+
+.flex-img {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  
+}
+
+.flex-img img {
+  width: 500px;
+  height: 300px;
+}
+
+.flex-img figure {
+  flex: 1;
+  margin: 0;
+}
+
+#contact-me {
+  color: black;
+}
+
+#contact-me h2 {
+  position: absolute;
+  top: 200px;
+  left: 450px;
+}
+
+#contact-me h3 {
+  font-weight: lighter;
+  position: absolute;
+  top: 250px;
+  left: 305px;
+}
+
+#contact-me a{
+  color: black;
+}
+#contact-me nav ul li {
+  color: black;
+  list-style-type: none;
+}
+
+#contact-me li:hover {
+  text-decoration: underline;
+  text-decoration-color: black;
+}
+#contact-me li:hover {
+  text-decoration: underline;
+  text-decoration-color: black;
+}
 /* TODO: Label selector type */
 #contact-section {
-  background-color: gray;
+  position: absolute;
+  
 }
