--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -55,7 +55,7 @@ header h1 {
 }
 
 header nav {
-  padding-top: 15px;
+  padding: 15px 16px;
   margin-right: 30px;
   text-align: center;
   
@@ -75,6 +75,7 @@ header nav ul {
 
 header nav ul li {
   display: inline-block;
+  
   margin-left: 25px;
   
 }
@@ -88,7 +89,17 @@ a {
 
 main + section {
   position: abs
+  
 }
+
+section {
+  display: none;
+}
+
+section:target {
+  display: block;
+}
+
 #section icon {
   width: 100px;
     background-color: #f0ead6;
@@ -97,29 +108,29 @@ main + section {
     margin-top: 20px;
 }
 
-#about-me {
+#about-me-content {
   color: black;
 }
 
-#about-me h2 {
+#about-me-content h2 {
   position: absolute;
   top: 200px;
   left: 450px;
 }
 
-#about-me h3 {
+#about-me-content h3 {
   font-weight: lighter;
   position: absolute;
   top: 250px;
   left: 305px;
 }
-#about-me p {
+#about-me-content p {
   position: absolute;
   top: 300px;
   left: 305px;
 }
 
-#about-me figure img{
+#about-me-content figure img{
   text-align: right;
   position: absolute;
   right: 500px;
@@ -127,32 +138,32 @@ main + section {
   
 }
 
-#links {
+#links-content {
   color: black;
 }
 
-#links h2 {
+#links-content h2 {
   position: absolute;
   top: 200px;
   left: 450px;
 }
 
-#links h3 {
+#links-content h3 {
   font-weight: lighter;
   position: absolute;
   top: 250px;
   left: 305px;
 }
 
-#links a{
+#links-content a{
   color: black;
 }
-#links nav ul li {
+#links-content nav ul li {
   color: black;
   list-style-type: none;
 }
 
-#links li:hover {
+#links-content li:hover {
   text-decoration: underline;
   text-decoration-color: black;
 }
@@ -163,32 +174,32 @@ main + section {
   
 }
 
-#portfolio {
+#portfolio-content {
   color: black;
   display:flex;
   flex-wrap: wrap;
 flex-direction: column;
 }
 
-#portfolio h2 {
+#portfolio-content h2 {
   position: absolute;
   top: 200px;
   left: 450px;
 }
 
-#portfolio h3 {
+#portfolio-content h3 {
   font-weight: lighter;
   position: absolute;
   top: 250px;
   left: 305px;
 }
-#portfolio p {
+#portfolio-content p {
   position: absolute;
   top: 300px;
   left: 305px;
 }
 
-#portfolio img {
+#portfolio-content img {
   text-align: right;
   position: relative;
   left: 52.85%;
@@ -215,41 +226,54 @@ flex-direction: column;
   margin: 0;
 }
 
-#contact-me {
+#contact-me-content {
   color: black;
 }
 
-#contact-me h2 {
+#contact-me-content h2 {
   position: absolute;
   top: 200px;
   left: 450px;
 }
 
-#contact-me h3 {
+#contact-me-content h3 {
   font-weight: lighter;
   position: absolute;
   top: 250px;
   left: 305px;
 }
 
-#contact-me a{
+#contact-me-content a{
   color: black;
 }
-#contact-me nav ul li {
+#contact-me-content nav ul li {
   color: black;
   list-style-type: none;
 }
 
-#contact-me li:hover {
+#contact-me-content li:hover {
   text-decoration: underline;
   text-decoration-color: black;
 }
-#contact-me li:hover {
+#contact-me-content li:hover {
   text-decoration: underline;
   text-decoration-color: black;
 }
 /* TODO: Label selector type */
 #contact-section {
   position: absolute;
-  
+}
+
+/*implement target displays and hover menu items*/
+header nav a:hover {
+  background-color: lightgray;
+  color: black;
+}
+
+.About-Me, .Portfolio, .Links, .Contact-Me {
+  display: none;
+}
+
+.About-Me:target, .Portfolio:target, .Links:target, .Contact-Me:target {
+  display: block;
 }
