--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -19,20 +19,22 @@ footer {
 }
 
 header{ 
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   left: 0px;
   
 }
 
 footer p {
-  position: absolute;
+  position: fixed;
   bottom: -20px;
   left: 20px;
 }
@@ -54,7 +56,7 @@ header h1 {
   font-weight: lighter;
   font-size: 20px;
   position: absolute;
-  color: whitesmoke;
+  color: rgb(165, 165, 165);
   left: 150px;
   top: -14%;
 
@@ -64,30 +66,25 @@ header nav {
   padding: 15px 16px;
   margin-right: 30px;
   text-align: center;
-  
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
   position: absolute;
   top: -40%;
   right: 34%;
-  
-  
+   
 }
 
 header nav ul {
   list-style-type: none;
-  
 }
 
 header nav ul li {
   display: inline-block;
-  
   margin-left: 25px;
-  
 }
 
 header li a {
-  color: whitesmoke;
+  color: rgb(165, 165, 165);
   text-decoration: none;
   padding-block: 45px;
   padding-left: 15px;
@@ -97,44 +94,50 @@ header li a {
 }
 
 section {
-  display: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 section:target {
   display: block;
 }
 
-#section icon {
-  width: 100px;
-    background-color: #f0ead6;
-    border-radius: 100%;
-    text-align: center;
-    margin-top: 20px;
-}
+
 
 #about-me-content {
   color: black;
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 2;
 }
 
 #about-me-content h2 {
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
   top: 200px;
   left: 450px;
 }
 
 #about-me-content h3 {
+  display: flex;
+  flex-wrap: wrap;
   font-weight: lighter;
   position: absolute;
   top: 250px;
   left: 305px;
 }
 #about-me-content p {
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
   top: 300px;
   left: 305px;
 }
 
 #about-me-content figure img{
+  display: flex;
+  flex-wrap: wrap;
   text-align: right;
   position: absolute;
   right: 500px;
@@ -182,43 +185,51 @@ section:target {
   color: black;
   display:flex;
   flex-wrap: wrap;
-flex-direction: column;
+  flex-direction: column;
+  max-width: 100%;
+  text-align: center;
 }
 
 #portfolio-content h2 {
+  display: flex;
+  flex-wrap: wrap;
   position: absolute;
   top: 200px;
   left: 450px;
 }
 
-#portfolio-content h3 {
-  font-weight: lighter;
-  position: absolute;
-  top: 250px;
-  left: 305px;
+#portfolio-card h3 {
+  font-weight: bold;
 }
 
-#portfolio-content h4 {
-  font-weight:bolder;
-  position: absolute;
-  top: 500px;
-  left: 305px;
-}
-#portfolio-content p {
-  position: absolute;
-  top: 300px;
-  left: 305px;
+
+/*hover, transform,scale*/
+
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+  border: 5px solid black;
+  border-radius: 10px;
+  flex: 1;
 }
 
-#portfolio-content img {
-  text-align: right;
-  position: relative;
-  left: 52.85%;
-  top: 120px;
- 
-  padding-block: 10px;
-  
+.portfolio:hover {
+  transform: scale(1.2);
+  -webkit-transition: transform 0.5s ease-in-out;
 }
+#portfolio-card {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  max-width: 30%;
+  text-align: center;
+  margin-top: 150px;
+  margin-left: 50%;  
+}
+
 
 .flex-img {
   display: flex;
@@ -228,8 +239,8 @@ flex-direction: column;
 }
 
 .flex-img img {
-  width: 500px;
-  height: 300px;
+  max-width: 100%;
+ 
 }
 
 .flex-img figure {
@@ -285,6 +296,33 @@ header nav a:hover {
   display: block;
 }
 
+.asideMain {
+    visibility: visible;
+}
 
+.asideSmall {
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+/*TO DO FLEX PROPERTIES*/
+@media screen and (max-width: 1500px) {
+  .asideMain {
+    visibility: hidden;
+    
+  }
+
+  .asideSmall {
+    visibility: visible;
+  }
+
+  #flex-img {
+    flex: 1 1 auto;
+    flex-shrink: 3;
+  }
+}
 
 
